--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".Activities.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewItem"
+        android:id="@+id/recyclerViewPokemon"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
